--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #518965;
     font-family: 'Kanit', sans-serif;
+    text-align: center;
 }
 
 img {
-    border: 3px solid black;
+    border: 3px solid white;
+    border-radius: 20px;
     float: right;
-    width: 50%;
+    width: 25%;
+}
+
+hr {
+    margin: 20px;
 }
 
 .content-1 {
     display: inline-block;
+    height: auto;
     margin-left: 20px;
     margin-right: 20px;
     background-color: white;
